--- a/css/variables.css
+++ b/css/variables.css
@@ -9,6 +9,13 @@ h1, h2, h3, h4, h5, h6 {
 p, div {
     font-family: 'Old Standard TT', Georgia, Times, serif;
     color: #353129;
+    font-size: 18px;
+    line-height: 30px;
+}
+
+input#mc-embedded-subscribe.button {
+	float: right;
+	margin-right: 25px;
 }
 
 .row {
@@ -30,4 +37,9 @@ body {
 
 hr {
   border-top-color: #353129;
+}
+
+#logo {
+	margin-bottom: 50px;
+	margin-top: 50px;
 }
